<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.cnsi.android.wammisdemo20.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/header_cover_image"
        android:layout_width="500dp"
        android:layout_height="600dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.cnsi.mobile.wammis.MainActivity">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/user_profile_photo"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background = "#FFFFFF"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:src="@drawable/hca_final" />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="10dp">
                </View>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Show Password"
                    android:textColor="@color/cardview_light_background"
                    android:padding="4dp"
                    android:textSize="10dp"
                    android:id="@+id/switch1"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    />

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:background="@drawable/app_button_background"
                    android:textColor="@color/cardview_light_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="10dp">
                </View>
                <Button
                    android:id="@+id/btn_forgot_passoword"
                    style="?android:textAppearanceSmall"
                    android:background="@android:color/transparent"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="10dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/forgot_password"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btn_create_account"
                    style="?android:textAppearanceSmall"
                    android:background="@android:color/transparent"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="10dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/create_account"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>


    </RelativeLayout>
</RelativeLayout>
