<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/profile_layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/navigation_header_image"
            />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_circular_border_imageview"
            android:layout_marginTop="40dp"
            android:elevation="4dp"
            android:paddingBottom="24dp">


            <TextView
                android:id="@+id/user_profile_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/drawer_username"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center" />

        </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_cover_image"
                android:layout_marginTop="65dp"
                android:orientation="vertical">

               <TableLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/tableLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding ="5dp"
                    android:shrinkColumns="*"
                    android:stretchColumns="*"
                    android:layout_gravity="center">


                    <TableRow
                        android:id="@+id/tableRow111"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:background="@drawable/cell_shape_elig_header">

                        <TextView
                            android:id="@+id/TextView041"
                            android:text="CLIENT ID     "
                            android:textSize="10dp"
                            android:textStyle="bold"
                            android:typeface="serif"
                            android:layout_weight="1"
                            android:textAlignment="viewStart"
                            android:layout_column="2"></TextView>
                        <TextView
                            android:id="@+id/TextView0411"
                            android:text="CLIENT NAME   "
                            android:textSize="10dp"
                            android:textStyle="bold"
                            android:typeface="serif"
                            android:layout_weight="1"
                            android:textAlignment="viewStart"
                            android:layout_column="3"></TextView>k
                        <TextView
                            android:id="@+id/TextView04111"
                            android:text="CARD STATUS     "
                            android:textSize="10dp"
                            android:textStyle="bold"
                            android:typeface="serif"
                            android:layout_weight="1"
                            android:textAlignment="viewStart"
                            android:layout_column="4"></TextView>
                    </TableRow>
                    <TableRow
                        android:background="@drawable/cell_shape_elig_content">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:id="@+id/checkBox1"
                            android:layout_column="1" />

                        <TextView
                            android:id="@+id/TextView0412"
                            android:text="@string/client_id"
                            android:textSize="10dp"
                            android:typeface="serif"
                            android:layout_weight="1"
                            android:textAlignment="viewStart"
                            android:layout_column="2"></TextView>
                        <TextView
                            android:id="@+id/CName1"
                            android:text="@string/drawer_username"
                            android:textSize="10dp"
                            android:typeface="serif"
                            android:layout_weight="1"
                            android:textAlignment="viewStart"
                            android:layout_column="3"></TextView>
                        <TextView
                            android:id="@+id/status1"
                            android:text="Available"
                            android:textSize="10dp"
                            android:typeface="serif"
                            android:layout_weight="1"
                            android:textAlignment="viewStart"
                            android:layout_column="4"></TextView>
                    </TableRow>
                    <TableRow
                        android:background="@drawable/cell_shape_elig_content">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:id="@+id/checkBox2"
                            android:layout_column="1" />

                        <TextView
                            android:id="@+id/TextView0413"
                            android:text="@string/dependent_id"
                            android:textSize="10dp"
                            android:typeface="serif"
                            android:layout_weight="1"
                            android:textAlignment="viewStart"
                            android:layout_column="2"></TextView>
                        <TextView
                            android:id="@+id/CName2"
                            android:text="@string/dependent_name"
                            android:textSize="10dp"
                            android:typeface="serif"
                            android:layout_weight="1"
                            android:textAlignment="viewStart"
                            android:layout_column="3"></TextView>
                        <TextView
                            android:id="@+id/status2"
                            android:text="Available"
                            android:textSize="10dp"
                            android:typeface="serif"
                            android:layout_weight="1"
                            android:textAlignment="viewStart"
                            android:layout_column="4"></TextView>
                    </TableRow>
                </TableLayout>
                <!-- adding empty space -->
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="30dp">
                </View>
                <Button
                    android:id = "@+id/new_id_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/app_button_background"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="20dp"
                    android:textColor="@color/cardview_light_background"
                    android:text="Request a new card" />
            </LinearLayout>
    </RelativeLayout>

</ScrollView>